[gd_scene load_steps=14 format=3 uid="uid://dsebqj4hr1tjj"]

[ext_resource type="Texture2D" uid="uid://b7h33fhstjrg5" path="res://Resource/ui/popup_pause_2.png" id="1_ppj35"]
[ext_resource type="Script" uid="uid://cgdacrl3nrint" path="res://Scenes/UI/PauseBar.gd" id="1_s1d3t"]
[ext_resource type="Texture2D" uid="uid://cxmw7lli65gek" path="res://Resource/ui/btn_pause_home.png" id="2_830yw"]
[ext_resource type="PackedScene" uid="uid://cpn2q2r1n3ibn" path="res://Scenes/Layers/BaseLayer.tscn" id="2_oov15"]
[ext_resource type="Texture2D" uid="uid://do42o1ex81fnk" path="res://Resource/ui/btn_pause_home_over.png" id="3_ci602"]
[ext_resource type="BitMap" uid="uid://od4elqafup87" path="res://Resource/ui/btn_back_bitmap.png" id="4_n41ba"]
[ext_resource type="Texture2D" uid="uid://1otb7op8mh0a" path="res://Resource/ui/btn_pause_retry.png" id="5_thlqu"]
[ext_resource type="Texture2D" uid="uid://vnmdhg823vm3" path="res://Resource/ui/btn_pause_retry_over.png" id="6_56e1i"]
[ext_resource type="Texture2D" uid="uid://cou5rn0hoit2p" path="res://Resource/ui/btn_pause_continue.png" id="7_35wrl"]
[ext_resource type="Texture2D" uid="uid://cftjbf3tedrju" path="res://Resource/ui/btn_pause_continue_over.png" id="8_ssiba"]
[ext_resource type="Texture2D" uid="uid://b0o17g1n8n1hm" path="res://Resource/ui/pause_dashed_line.png" id="9_rbdjj"]
[ext_resource type="Texture2D" uid="uid://b8xbcjc6nb6k4" path="res://Resource/ui/boss_face.png" id="11_33nqa"]

[sub_resource type="LabelSettings" id="LabelSettings_xk283"]
font_size = 40
font_color = Color(0.952941, 0.270588, 0.0352941, 1)

[node name="PauseBar" type="CanvasLayer"]
layer = 11

[node name="PauseBar" type="Control" parent="."]
process_mode = 1
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_s1d3t")

[node name="Container" type="AspectRatioContainer" parent="PauseBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -274.0
offset_right = 256.0
offset_bottom = 274.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
ratio = 0.9343

[node name="Panel" type="TextureRect" parent="PauseBar/Container"]
custom_minimum_size = Vector2(512, 548)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("1_ppj35")
expand_mode = 1

[node name="Title" type="Label" parent="PauseBar/Container/Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 72.0
offset_top = 3.0
offset_right = -100.0
offset_bottom = 61.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.9115, 0.41, 1)
theme_override_colors/font_shadow_color = Color(0.8, 0.330667, 0.16, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 4
theme_override_constants/shadow_outline_size = 4
theme_override_font_sizes/font_size = 45
text = "暂停"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Index" type="Label" parent="PauseBar/Container/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 72.0
offset_top = 55.0
offset_right = -100.0
offset_bottom = 94.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "1-S"
horizontal_alignment = 1

[node name="Name" type="Label" parent="PauseBar/Container/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 72.0
offset_top = 85.0
offset_right = -100.0
offset_bottom = 124.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 28
text = "Two By Two"
horizontal_alignment = 1

[node name="Box" type="HBoxContainer" parent="PauseBar/Container/Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 40.0
offset_top = 172.0
offset_right = -42.0
offset_bottom = 372.0
grow_horizontal = 2
alignment = 1

[node name="BtnBox" type="AspectRatioContainer" parent="PauseBar/Container/Panel/Box"]
layout_mode = 2
size_flags_horizontal = 3
ratio = 0.5

[node name="Vbox" type="VBoxContainer" parent="PauseBar/Container/Panel/Box/BtnBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Quit" type="TextureButton" parent="PauseBar/Container/Panel/Box/BtnBox/Vbox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 23.0
texture_normal = ExtResource("2_830yw")
texture_pressed = ExtResource("3_ci602")
texture_hover = ExtResource("3_ci602")
texture_disabled = ExtResource("2_830yw")
texture_click_mask = ExtResource("4_n41ba")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="PauseBar/Container/Panel/Box/BtnBox/Vbox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 17.0
theme_override_constants/line_spacing = 0
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 0
theme_override_constants/shadow_outline_size = 0
text = "退出"
label_settings = SubResource("LabelSettings_xk283")
horizontal_alignment = 1

[node name="BtnBox2" type="AspectRatioContainer" parent="PauseBar/Container/Panel/Box"]
layout_mode = 2
size_flags_horizontal = 3
ratio = 0.5

[node name="Vbox" type="VBoxContainer" parent="PauseBar/Container/Panel/Box/BtnBox2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Reload" type="TextureButton" parent="PauseBar/Container/Panel/Box/BtnBox2/Vbox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 23.0
texture_normal = ExtResource("5_thlqu")
texture_pressed = ExtResource("6_56e1i")
texture_hover = ExtResource("6_56e1i")
texture_disabled = ExtResource("5_thlqu")
texture_click_mask = ExtResource("4_n41ba")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="PauseBar/Container/Panel/Box/BtnBox2/Vbox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 17.0
theme_override_constants/line_spacing = 0
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 0
theme_override_constants/shadow_outline_size = 0
text = "重试"
label_settings = SubResource("LabelSettings_xk283")
horizontal_alignment = 1

[node name="BtnBox3" type="AspectRatioContainer" parent="PauseBar/Container/Panel/Box"]
layout_mode = 2
size_flags_horizontal = 3
ratio = 0.5

[node name="Vbox" type="VBoxContainer" parent="PauseBar/Container/Panel/Box/BtnBox3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Continue" type="TextureButton" parent="PauseBar/Container/Panel/Box/BtnBox3/Vbox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 23.0
texture_normal = ExtResource("7_35wrl")
texture_pressed = ExtResource("8_ssiba")
texture_hover = ExtResource("8_ssiba")
texture_disabled = ExtResource("7_35wrl")
texture_click_mask = ExtResource("4_n41ba")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="PauseBar/Container/Panel/Box/BtnBox3/Vbox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 17.0
theme_override_constants/line_spacing = 0
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 0
theme_override_constants/shadow_outline_size = 0
text = "继续"
label_settings = SubResource("LabelSettings_xk283")
horizontal_alignment = 1

[node name="Line" type="TextureRect" parent="PauseBar/Container/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.148
anchor_top = 0.36
anchor_right = 0.859
anchor_bottom = 0.366
offset_left = 0.223991
offset_top = 140.72
offset_right = 0.117981
offset_bottom = 140.72
texture = ExtResource("9_rbdjj")

[node name="BossIcon" type="TextureRect" parent="PauseBar/Container/Panel"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 132.0
offset_top = 335.0
offset_right = 384.0
offset_bottom = 513.2
texture = ExtResource("11_33nqa")
expand_mode = 1

[node name="UI" parent="PauseBar" instance=ExtResource("2_oov15")]

[connection signal="pressed" from="PauseBar/Container/Panel/Box/BtnBox/Vbox/Quit" to="PauseBar" method="_on_quit_pressed"]
[connection signal="pressed" from="PauseBar/Container/Panel/Box/BtnBox2/Vbox/Reload" to="PauseBar" method="_on_reload_pressed"]
[connection signal="pressed" from="PauseBar/Container/Panel/Box/BtnBox3/Vbox/Continue" to="PauseBar" method="_on_continue_pressed"]
